# simpleBIDS

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
simpleBIDS/: __init__.py
simpleBIDS/bids/: __init__.py  config_builder.py  converter.py  participants.py  scaffold.py
simpleBIDS/cli/: __init__.py  convert.py  init.py  label.py  sort.py  update_participants.py
simpleBIDS/gui/: __init__.py  app.py  label_form.py  progress_panel.py  series_filter.py  series_panel.py  study_config.py
simpleBIDS/inference/: __init__.py  session_inference.py  subject_inference.py
simpleBIDS/parsers/: __init__.py  dicom_parser.py  nifti_parser.py  path_parser.py
simpleBIDS/patterns/: __init__.py  series_grouper.py  slice_sampler.py  symlink_sorter.py
simpleBIDS/schema/: __init__.py  bids_schema.py
simpleBIDS/utils/: __init__.py  filesystem.py  logging.py  progress.py
tests/: conftest.py
tests/test_bids/: test_config_builder.py  test_converter.py  test_participants.py  test_scaffold.py
tests/test_cli/: test_convert.py  test_init.py  test_label.py  test_sort.py  test_update_participants.py
tests/test_gui/: test_label_form_entities.py  test_series_filter.py  test_slice_logging.py
tests/test_inference/: test_session_inference.py  test_subject_inference.py
tests/test_parsers/: test_dicom_parser.py  test_nifti_parser.py  test_path_parser.py
tests/test_patterns/: test_series_grouper.py  test_slice_sampler.py  test_symlink_sorter.py
tests/test_schema/: test_bids_schema.py
tests/test_utils/: test_filesystem.py  test_logging.py  test_progress.py
