[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simpleBIDS"
version = "0.1.0"
description = "Efficient neuroimaging metadata parsing and BIDS conversion with a lightweight GUI"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["BIDS", "neuroimaging", "DICOM", "NIfTI", "MRI"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "pydicom>=2.4",
    "nibabel>=5.0",
    "numpy>=1.24",
    "Pillow>=10.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
simplebids = "simpleBIDS.gui.app:main"
bids-init = "simpleBIDS.cli.init:main"
bids-sort = "simpleBIDS.cli.sort:main"
bids-label = "simpleBIDS.cli.label:main"
bids-convert = "simpleBIDS.cli.convert:main"
bids-update-participants = "simpleBIDS.cli.update_participants:main"

[tool.hatch.build.targets.wheel]
packages = ["simpleBIDS"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["simpleBIDS"]
omit = ["simpleBIDS/gui/*"]
